--- a/quiz.css
+++ b/quiz.css
@@ -135,3 +135,27 @@ body {
   background-color: #fff;
   color: #0c0e15;
 }
+
+@media only screen and (max-width: 600px) {
+  .quiz-container h1 {
+    font-size: 2rem;
+  }
+  
+  .quiz-container p {
+    font-size: 1rem;
+  }
+  
+  #start-btn,
+  #true-btn,
+  #false-btn,
+  #false2-btn,
+  #restart-btn {
+    font-size: 1rem;
+    padding: 0.5rem 1rem;
+    border-radius: 1rem;
+  }
+  
+  #score {
+    padding: 5rem;
+  }
+}
