--- a/quiz.css
+++ b/quiz.css
@@ -2,7 +2,7 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin: 0;
   padding: 0;
-  
+
 }
 
 .quiz-container {
@@ -136,26 +136,56 @@ body {
   color: #0c0e15;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 400px) {
+
   .quiz-container h1 {
-    font-size: 2rem;
+    font-size: 3rem;
+    margin-bottom: 2rem;
+    text-align: center;
   }
   
   .quiz-container p {
-    font-size: 1rem;
+    font-size: 1.5rem;
+    margin-bottom: 3rem;
+    text-align: center;
   }
-  
-  #start-btn,
-  #true-btn,
-  #false-btn,
-  #false2-btn,
-  #restart-btn {
-    font-size: 1rem;
-    padding: 0.5rem 1rem;
-    border-radius: 1rem;
+
+  body {
+    height: 100%;
+    width: 100%;
+    margin: 0;
   }
-  
-  #score {
-    padding: 5rem;
+
+  .quiz-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #0c0e15;
+    color: #fff;
+  }
+
+  #quiz {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #6c6464c5;
+    color: #0c0e15;
+    padding: 2rem;
+    box-sizing: border-box;
+  }
+
+  #results {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    background-color: #0c0e15;
+    color: #fff;
+    margin-bottom: 0;
   }
 }
