--- a/quiz.css
+++ b/quiz.css
@@ -151,9 +151,12 @@ body {
   }
 
   body {
+    display: flex;
+    flex-direction: column;
     height: 100%;
     width: 100%;
     margin: 0;
+    padding: 0;
   }
 
   .quiz-container {
@@ -161,7 +164,8 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 100%;
+    width: 100%;
     background-color: #0c0e15;
     color: #fff;
   }
