--- a/quiz.css
+++ b/quiz.css
@@ -44,6 +44,12 @@ body {
   color: #0c0e15;
 }
 
+.buttons{
+  display: flex;
+  justify-content: space-around;
+  width: 75%;
+}
+
 #quiz {
   display: flex;
   flex-direction: column;
@@ -62,11 +68,7 @@ body {
   text-align: center;
 }
 
-.buttons {
-  display: flex;
-  justify-content: space-around;
-  flex-direction: row;
-}
+
 
 .results {
   display: flex;
@@ -190,6 +192,6 @@ body {
     height: 100%;
     background-color: #0c0e15;
     color: #fff;
-    margin-bottom: 0;
+    
   }
 }
