--- a/quiz.css
+++ b/quiz.css
@@ -117,7 +117,7 @@ body {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  background-color: #0c0e15;
+  background-color: #252a3b;
   color: #fff;
   padding-bottom: 1.8rem;
   min-height: 100vh;
